# sv2-ui

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  orval.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  docker-release.yaml
deploy/: nginx.conf
docker/: .env.example  Dockerfile  entrypoint.sh  nginx.conf
docker/bitcoin-core-ipc/: Dockerfile  entrypoint.sh
docker/config/: jdc-config.toml.template  translator-config.toml.template
docs/: monitoring-api-compatibility.md
server/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
server/src/: app.ts  bitcoin-rpc-validator.ts  compatibility.test.ts  compatibility.ts  config-generator.test.ts  config-generator.ts  constants.ts  docker.test.ts  docker.ts  image-config.ts  index.ts  main.rs  types.ts
server/src/config/: image-config.test.ts
server/src/logs/: current-upstream.test.ts  current-upstream.ts  diagnostics.ts  parsers.test.ts  parsers.ts  types.ts
server/src/routes/: bitcoin.ts  check-socket.ts  config.ts  control.ts  keys.ts  logs.ts  setup.ts  status.ts  update.ts  wizard-data.ts
server/src/services/: bitcoin-docker.service.ts  config.service.ts  docker.service.ts  keygen.service.ts
shared/: openapi.json  package.json  ports.json
shared/src/: images.ts  types.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/config-templates/: config-builder.ts  constants.ts  index.ts  pools.ts  types.ts  utils.ts
src/context/: HashrateHistoryContext.tsx
src/data/: faq-data.ts
src/lib/: pools.ts  (+10 more)
(+103 files in other folders)
